Archive2/2c/7985a1d27deb35/output
main.cpp:12:14: error: no matching constructor for initialization of 'S'
    S a[1] = {};
             ^
main.cpp:4:5: note: candidate constructor not viable: requires 1 argument, but 0 were provided
    S(std::initializer_list<int>){}
    ^
main.cpp:3:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
struct S {
       ^
main.cpp:3:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
1 error generated.
